--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>My Name Is Borno</h1>
-    
+    <header>
+        <section class="banner">
+         <div class="banner-items">
+            <h2 class="banner-title">Happy New Year</h2>
+            <h1 class="banner-head">New Year Party <br>
+                 Celebration</h1>
+        </div>
+        </section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>   
 </body>
 </html>
